part2/project/manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: project-backend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-backend
  template:
    metadata:
      labels:
        app: project-backend
    spec:
      volumes:
        - name: project-pvolume
          persistentVolumeClaim:
            claimName: project-claim
      containers:
        - name: project-backend
          image: heseduud/projectbackend:2.10v2
          volumeMounts:
            - name: project-pvolume
              mountPath: /usr/src/app/files
