part2/project/manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: projectbackend-svc
spec:
  type: ClusterIP
  selector:
    app: project-backend
  ports:
  - name: http
    protocol: TCP
    port: 5000
    targetPort: 5000
